--- a/tr.po
+++ b/tr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: GIMX 7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-27 19:35+0200\n"
-"PO-Revision-Date: 2019-01-25 23:29+0300\n"
+"PO-Revision-Date: 2019-01-25 23:47+0300\n"
 "Last-Translator: \n"
 "Language-Team: Osman Çitçi <www.osmancitci.com.tr>\n"
 "Language: tr_TR\n"
@@ -278,11 +278,11 @@ msgstr "*Config Dosyası %s Yazılırken Hata Oluştu\n"
 
 #: ../core/calibration.c:327
 msgid "calibration done\n"
-msgstr "kalibrasyon Tamam\n"
+msgstr "Kalibrasyon Tamam\n"
 
 #: ../core/calibration.c:350
 msgid "calibrating sensitivity\n"
-msgstr "kalibrasyon Duyarlılığı\n"
+msgstr "Kalibrasyon Duyarlılığı\n"
 
 #: ../core/calibration.c:357
 msgid "calibrating x/y ratio\n"
@@ -786,7 +786,7 @@ msgstr "Joystick"
 
 #: ../config/gimx-config.cpp:928
 msgid "Broken-line correction parameters"
-msgstr "Broken-line Düzeltme Parametreleri"
+msgstr "Bozuk Satır Düzeltme Parametreleri"
 
 #: ../config/gimx-config.cpp:931 ../config/gimx-config.cpp:937
 msgid "0"
@@ -826,7 +826,7 @@ msgstr "Rumble"
 
 #: ../config/gimx-config.cpp:999
 msgid "Constant"
-msgstr "Constant"
+msgstr "Sabit"
 
 #: ../config/gimx-config.cpp:1001
 msgid "Spring"
@@ -1456,7 +1456,7 @@ msgstr "Gimx-Fpsconfig (Çeviri - Osman Çitçi)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:266
 msgid "Buffer size (Hip Fire)"
-msgstr "Tampon Boyutu (Kalça Ateşi)"
+msgstr "Tampon Boyutu (Hip Fire)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:269
 msgid "Buffer size (ADS)"
@@ -1464,7 +1464,7 @@ msgstr "Tampon Boyutu (ADS)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:272
 msgid "Dead zone (Hip Fire)"
-msgstr "Ölü Bölge (Kalça Ateşi)"
+msgstr "Ölü Bölge (Hip Fire)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:275
 msgid "Dead zone (ADS)"
@@ -1476,7 +1476,7 @@ msgstr "Duyarlılık (ADS)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:279
 msgid "Sensitivity (Hip Fire)"
-msgstr "Duyarlılık (Kalça Ateşi)"
+msgstr "Duyarlılık (Hip Fire)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:281
 msgid "Acceleration (ADS)"
@@ -1484,7 +1484,7 @@ msgstr "Hızlanma (ADS)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:283
 msgid "Filter (Hip Fire)"
-msgstr "Filtre (Kalça Ateşi)"
+msgstr "Filtre (Hip Fire)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:285
 msgid "Filter (ADS)"
@@ -1492,11 +1492,11 @@ msgstr "Filtre (ADS)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:287
 msgid "Acceleration (Hip Fire)"
-msgstr "Hızlanma (Kalça Ateşi)"
+msgstr "Hızlanma (Hip Fire)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:288
 msgid "Hip Fire"
-msgstr "Kalça Ateşi"
+msgstr "Hip Fire"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:290
 msgid "Dead zone shape"
@@ -1520,7 +1520,7 @@ msgstr "x/y Oranı"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:364
 msgid "Dead zone shape (Hip Fire)"
-msgstr "Ölü Bölge Şekli (Kalça Ateşi)"
+msgstr "Ölü Bölge Şekli (Hip Fire)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:368
 msgid "Dead zone shape (ADS)"
@@ -1528,7 +1528,7 @@ msgstr "Ölü Bölge Şekli (ADS)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:370
 msgid "x/y ratio (Hip Fire)"
-msgstr "x/y Oranı (Kalça Ateşi)"
+msgstr "x/y Oranı (Hip Fire)"
 
 #: ../fpsconfig/gimx-fpsconfig.cpp:372
 msgid "x/y ratio (ADS)"
