--- a/tr.po
+++ b/tr.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: GIMX 7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-27 19:35+0200\n"
-"PO-Revision-Date: 2019-01-30 02:33+0300\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2019-03-20 00:21+0300\n"
+"Last-Translator: Osman Çitçi <www.osmancitci.com.tr>\n"
 "Language-Team: Osman Çitçi <www.osmancitci.com.tr>\n"
 "Language: tr_TR\n"
 "MIME-Version: 1.0\n"
@@ -2296,6 +2296,14 @@ msgstr "Yapılandırmanızı Kaydetmek İstermisiniz?"
 #: ../launcher/gimx-launcher.cpp:1194
 msgid "Physical devices (elevated privileges)"
 msgstr "Fiziksel Aygıtlar ( Yüksek Öncelik )"
+
+#: ../config/gimx-config.cpp:1262
+msgid "Export to clipboard"
+msgstr "Panoya  Aktar"
+
+#: ../config/gimx-config.cpp:1264
+msgid "Import from clipboard"
+msgstr "Panodan İçe Aktar"
 
 #~ msgid "Can't save_current "
 #~ msgstr "Kaydedemiyorum "
